--- a/index.html
+++ b/index.html
@@ -1,23 +1,252 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" />
+    <title>프로젝트</title>
+
+    <!-- 아이콘 -->
+    <link rel="icon" href="./icon/favicon.ico" />
+
+    <!-- 오픈그래프 -->
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Project" />
+    <meta property="og:title" content="Project_for_HTML_CSS" />
+    <meta property="og:description" content="Project for HTML and CSS " />
+    <meta property="og:image" content="./image/opengragh.png" />
+    <meta
+      property="og:url"
+      content="https://joongholee84.github.io/Prj_HTML_CSS/"
+    />
+
+    <!-- 부트스트랩 -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
+
     <style>
-      #test {
+      /* 구글폰트 */
+      @import url("https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Gugi&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Hi+Melody&display=swap");
+
+      #experience {
+      }
+      #hobby {
+      }
+      #etc {
+      }
+
+      div {
+        /* border: 1px solid black; */
+      }
+      h1 {
+        font-family: "Black Han Sans", sans-serif;
+      }
+      h2 {
+        font-family: "Nanum Pen Script", cursive;
+      }
+      h3 {
+        font-family: "Gugi", cursive;
+      }
+      h4 {
+        font-family: "Hi Melody", cursive;
       }
     </style>
   </head>
   <body>
-    <h1>abc</h1>
-    <h1>abc</h1>
-    <h1>abc</h1>
-    <h1>abc</h1>
-    <h1>abc</h1>
-    <h1>abc</h1>
-    <h1>abc</h1>
-    <h1 id="test">abc</h1>
-    <h1>abc</h1>
-    <h1>abc</h1>
-    <h1>abc</h1>
-    <h1>abc</h1>
-    <a href="#test">back to top</a>
+    <div class="container-md">
+      <header class="bootstrap-header lh-1 py-3">
+        <div class="row flex-nowrap justify-content-between align-items-center">
+          <h1 class="text-left">
+            <a class="bootstrap-header-logo text-dark" href="#"
+              >안녕하세요. 반갑습니다</a
+            >👋
+          </h1>
+        </div>
+      </header>
+    </div>
+
+    <!-- 검은 상자 제목 -->
+    <main class="container-md">
+      <div class="p-4 p-md-5 mb-4 rounded text-bg-dark">
+        <div class="col-md-6 px-0">
+          <h1 class="display-7">
+            Bootstrap을 활용해
+            <span style="background-color: grey">퍼스널 브랜딩 페이지</span>
+            만들기
+          </h1>
+          <p class="lead my-3" style="font-size: medium">
+            다양한 태그와 라이브러리를 사용하여 자유롭게 표현 해보세요
+          </p>
+        </div>
+      </div>
+
+      <!-- 상자 가로 3개 -->
+      <div class="row mb-2">
+        <div class="col-md-4">
+          <div
+            class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-100 position-relative"
+          >
+            <div class="col p-4 d-flex flex-column position-static">
+              <h3 class="mb-0">경력</h3>
+              <a
+                class="stretched-link"
+                style="font-size: smaller"
+                href="#experience"
+                >자세히 보기</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div
+            class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-100 position-relative"
+          >
+            <div class="col p-4 d-flex flex-column position-static">
+              <h3 class="mb-0">취미</h3>
+              <a class="stretched-link" style="font-size: smaller" href="#hobby"
+                >자세히 보기</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div
+            class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-100 position-relative"
+          >
+            <div class="col p-4 d-flex flex-column position-static">
+              <h3 class="mb-0">기타</h3>
+              <a class="stretched-link" style="font-size: smaller" href="#etc"
+                >자세히 보기</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- 내용 왼쪽 -->
+      <div class="row g-5">
+        <div class="col-md-8">
+          <article id="experience" class="bootstrap-post">
+            <h2 id="CARRER" class="bootstrap-post-title mb-1">
+              <strong>🧳 경력</strong>
+            </h2>
+            <h3>리스트 사용하기</h3>
+            UL을 활용하여 리스트를 표현해 보세요
+            <br /><br />
+            <ul>
+              <li>첫번째</li>
+              <li>두번째</li>
+              <li>세번째</li>
+            </ul>
+            <br />
+            OL을 활용하여 리스트를 표현해 보세요
+            <br /><br />
+            <ol>
+              <li>첫번째</li>
+              <li>두번째</li>
+              <li>세번째</li>
+            </ol>
+            <br />
+            DL을 활용하여 리스트를 표현해 보세요
+            <br /><br />
+            <dl>
+              <dt>HyperText Markup Language (HTML)</dt>
+              <dd>HTML이란?</dd>
+              <dt>Cascading Style Sheets (CSS)</dt>
+              <dd>CSS란?</dd>
+              <dt>JavaScript (JS)</dt>
+              <dd>JS란?</dd>
+            </dl>
+            <br /><br />
+          </article>
+
+          <article id="hobby" class="bootstrap-post">
+            <h2 class="bootstrap-post-title mb-1"><strong>🧗🏻‍♀️ 취미</strong></h2>
+            <h3>헤딩 활용하기</h3>
+            <h6>
+              div 요소는 플로우 콘텐츠를 위한 통용 컨테이너 입니다. CSS로 꾸미기
+              전에는 콘텐츠나 레이아웃에 어떤 영향도 주지 않습니다.
+            </h6>
+            <h3>서브 헤딩</h3>
+            <h6>
+              p 요소는 하나의 문단을 나타냅니다. 시각적인 매체에서, 문단은 보통
+              인접 블록과의 여백과 첫줄의 들여쓰기로 구분하지만, HTML에서 문단은
+              이미지나 입력 폼 등 서로 관련있는 콘텐츠 무엇이나 될 수 있습니다.
+            </h6>
+            <br /><br />
+          </article>
+
+          <article id="etc" class="bootstrap-post">
+            <h2 class="bootstrap-post-title mb-1"><strong>😀 기타</strong></h2>
+            <h3>아직 더 표현하고 싶은게 있으신가요?</h3>
+            <p>아직도<mark>다양한 태그</mark>들이 남았답니다.</p>
+            <p>
+              <a
+                href="https://developer.mozilla.org/ko/docs/Web/HTML/Element"
+                target="_blank"
+                >여기에서</a
+              >
+              더 다양한 태그들을 확인해보시고 간단하게 사용해보세요
+            </p>
+            <p>
+              이미 만들어진 간단한 부트스트랩 스타일을 사용하고 싶다면?
+              <a href="https://getbootstrap.com" target="_blank">
+                부스트스트랩 문서를 참고해보세요
+              </a>
+            </p>
+            <br /><br />
+          </article>
+        </div>
+
+        <!-- 오른쪽 내용 -->
+        <div class="col-md-4">
+          <div class="position-sticky" style="top: 2rem">
+            <div class="p-4 mb-3 bg-light rounded">
+              <h3><strong>About</strong></h3>
+              저에 대해 더 궁금하신가요? 자세히 알고 싶다면 아래의 소셜을
+              확인해주세요.
+            </div>
+
+            <div class="p-4">
+              <h3><strong>Social</strong></h3>
+              <a href="https://www.facebook.com/">페이스북</a>
+              <br />
+              <a href="https://www.instagram.com">인스타그램</a>
+              <br />
+              <a
+                href="mailto:joongho.lee.84@gmail.com?subject=PROJECT_HTML_CSS&body=프로젝트용_메일보내기"
+              >
+                메일 보내기</a
+              >
+              <br />
+              <a href="tel:01089624454">전화 걸기</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <footer
+      class="bootstrap-footer"
+      style="background-color: lightgrey; padding: 20px 0 20px 0"
+    >
+      <p align="center">
+        template built for
+        <a href="https://getbootstrap.com/">Bootstrap</a>
+      </p>
+      <p align="center">
+        <a href="#">Back to top</a>
+      </p>
+    </footer>
   </body>
 </html>
