--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:site_name" content="Project" />
     <meta property="og:title" content="Project_for_HTML_CSS" />
     <meta property="og:description" content="Project for HTML and CSS " />
-    <meta property="og:image" content="image/opengragh.png" />
+    <meta property="og:image" content="https://joongholee84.github.io/Prj_HTML_CSS/image/opengragh.png" />
     <meta
       property="og:url"
       content="https://joongholee84.github.io/Prj_HTML_CSS/"
