--- a/index.html
+++ b/index.html
@@ -227,12 +227,12 @@
               <a href="https://www.instagram.com">인스타그램</a>
               <br />
               <a
-                href="mailto:joongho.lee.84@gmail.com?subject=PROJECT_HTML_CSS&body=프로젝트용_메일보내기"
+                href="mailto:$%^&@#@gmail.com?subject=PROJECT_HTML_CSS&body=프로젝트용_메일보내기"
               >
                 메일 보내기</a
               >
               <br />
-              <a href="tel:01089624454">전화 걸기</a>
+              <a href="tel:01812345678">전화 걸기</a>
             </div>
           </div>
         </div>
